[main] check for bad request body error
on branch [main]
